add config page
