# src/requests/api/index.js
@@ -1,7 +1,8 @@
 import {getWritReport} from "@/requests/api/writReportAPI";
-import {getWrits} from "@/requests/api/writAPI";
+import {getWrits, getWritStatus} from "@/requests/api/writAPI";
+import {getDefaultConfig, putDefaultConfig} from "@/requests/api/configAPI";
 
-const api = {getWritReport, getWrits};
+const api = {getWritReport, getWrits, getWritStatus, getDefaultConfig, putDefaultConfig};
 
 const install = (Vue) => {
     if (install.installed) {
